--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "day2",
+  "name": "React",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack serve"
+    "lint": "eslint .",
+    "fix": "eslint . --fix"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/darshkumbhar/React.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/darshkumbhar/React/issues"
+  },
+  "homepage": "https://github.com/darshkumbhar/React#readme",
   "dependencies": {
-    "webpack": "^5.39.1"
+    "eslint": "^7.29.0",
+    "react": "^17.0.2"
   },
   "devDependencies": {
-    "css-loader": "^5.2.6",
-    "style-loader": "^2.0.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "eslint-plugin-react": "^7.24.0"
   }
 }
