--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "React",
+  "name": "sample",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "fix": "eslint . --fix"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/darshkumbhar/React.git"
+    "fix": "eslint . --fix",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/darshkumbhar/React/issues"
-  },
-  "homepage": "https://github.com/darshkumbhar/React#readme",
-  "dependencies": {
-    "eslint": "^7.29.0",
-    "react": "^17.0.2"
-  },
   "devDependencies": {
-    "eslint-plugin-react": "^7.24.0"
+    "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.24.0",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run lint",
+      " git add ."
+    ]
+  },
+  "dependencies": {
+    "react": "^17.0.2"
   }
 }
